change mobile font size for title to prevent wrapping

--- a/styles/main.css
+++ b/styles/main.css
@@ -167,7 +167,7 @@ li {
   }
 
   header span {
-    font-size: 125px;
+    font-size: 115px;
   }
 
   #popup {
